[tool.poetry]
name = "generalized-rl"
version = "0.1.0"
description = "Generalized RL"
authors = ["Debajyoti Raychaudhuri"]

[tool.poetry.dependencies]
python = "^3.6"
enduro-agent = { path = "enduro-agent/" }

[tool.poetry.dev-dependencies]
tensorflow = "1.15.3"
opencv-python = "^4.4.0.42"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
