[tool.poetry]
name = "generalized-rl"
version = "0.1.0"
description = "Generalized RL"
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
enduro-agent = { path = "enduro-agent/" }
flappy-bird-agent = { path = "flappy-bird-agent/" }

[tool.poetry.dev-dependencies]
tensorflow = "1.15.3"
opencv-python = "^4.4.0.44"
dill = "^0.3.2"
loguru = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
