[tool.poetry]
name = "enduro-agent"
version = "0.1.0"
description = ""
authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gym = "^0.17.2"
atari-py = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
