[tool.poetry]
name = "flappy-bird-agent"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
gym = "0.15.7"
ple = { path = "PyGame-Learning-Environment/" }
gym_ple = "^0.3"
pygame = "^1.9.6"
atari-py = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
