[tool.poetry]
name = "flappy-bird-with-gunner-farneback-agent"
version = "0.1.0"
description = ""
authors = ["7000015346 <Debajyoti.Raychaudhuri@ap.sony.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
