[tool.poetry]
name = "flappy-bird-with-gunner-farneback-agent"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
