[tool.poetry]
name = "chess-bot"
version = "0.1.0"
description = "Chess Bot"
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
python-chess = "^0.31.4"
svglib = "^1.1.0"
Cython = "^0.29.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
