[tool.poetry]
name = "enduro-bot"
version = "0.1.0"
description = "Enduro Bot"
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
gym = "0.15.7"
atari-py = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
