[tool.poetry]
name = "flappy-bird-with-gunnar-farneback-bot"
version = "0.1.0"
description = "Flappy Bird With gunnar-farneback Bot"
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
